📃 docs: documentar api com swagger
